--- a/Part-2-GAN.ipynb
+++ b/Part-2-GAN.ipynb
@@ -94,18 +94,18 @@
     "        super().__init__()\n",
     "        \n",
     "        self.inner = nn.Sequential(\n",
-    "        nn.ConvTranspose2d(noise_dim, 256, kernel_size=7, stride=1, padding=0),  # → (N, 256, 4, 4)\n",
+    "        nn.ConvTranspose2d(noise_dim, 256, kernel_size=7, stride=1, padding=0),  # (N, 256, 7, 7)\n",
     "            nn.BatchNorm2d(256),\n",
     "            nn.GELU(),\n",
     "\n",
-    "            nn.ConvTranspose2d(256, 128, kernel_size=4, stride=2, padding=1),  # → (N, 128, 8, 8)\n",
+    "            nn.ConvTranspose2d(256, 128, kernel_size=4, stride=2, padding=1),  # (N, 128, 14, 14)\n",
     "            nn.BatchNorm2d(128),\n",
     "            nn.GELU(),\n",
     "\n",
-    "            nn.ConvTranspose2d(128, 64, kernel_size=4, stride=2, padding=1),   # → (N, 64, 16, 16)\n",
+    "            nn.ConvTranspose2d(128, 64, kernel_size=4, stride=2, padding=1),   #  (N, 64, 28, 28)\n",
     "            nn.BatchNorm2d(64),\n",
     "            nn.GELU(),\n",
-    "            nn.ConvTranspose2d(64, 1, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ConvTranspose2d(64, 1, kernel_size=3, stride=1, padding=1),   # (N, 1, 28, 28)\n",
     "            nn.Sigmoid()\n",
     "        )\n",
     "\n",
@@ -213,10 +213,10 @@
     "        self.mode = mode\n",
     "        \n",
     "        self.inner =nn.Sequential(\n",
-    "            nn.Conv2d(in_channels=1,out_channels=64,kernel_size=4, stride=1, padding=0),\n",
+    "            nn.Conv2d(in_channels=1,out_channels=64,kernel_size=4, stride=1, padding=0), #( N, 64, 25, 25 )\n",
     "            nn.LeakyReLU(inplace=True),\n",
     "            \n",
-    "            nn.Conv2d(in_channels=64,out_channels=128,kernel_size=4, stride=1, padding=0),\n",
+    "            nn.Conv2d(in_channels=64,out_channels=128,kernel_size=4, stride=1, padding=0), #( N, 128, 22, 22 )\n",
     "            nn.LeakyReLU(inplace=True),\n",
     "            nn.Flatten(),\n",
     "            nn.Linear(128*22*22, 1) \n",
